# adaptive_gaze_handover

./: README.md  controller.html  read_poses.sh  running.md
gaze_animation/: ease_functions.py  jens_edit.py  main.py  notifier.py  programs.py  server.py  server_new.py
gaze_animation/eyes/: ease_functions.py  ease_out_random.py  eyes_animated.py  jens.py  jens_edit.py  main.py  notifier.py  programs.py  pyproject.toml  server.py
gaze_tracking/: README.md  fixation_tracking.py  pyproject.toml  test_pygaze.py
handover_initiation/: README.md  alternative.py  main.py  pyproject.toml
other_material/analysis/: agency.R  custom.R  demo.R  density_left_handover.R  density_packaging.R  density_right_handover.R  gators.R  gaza_density_face_low_mean.R  gaze.R  handover.R  handover_gaze.R  handover_split.R  packaging_density_face_low_mean.R
other_material/info_consent/: Code_english.docx  Code_german.docx  Consent_english.docx  Consent_german.docx  DEMO_Packaging_Instructions.docx
other_material/opensesame/: Custom.osexp  Demographics.osexp  GAToRS.osexp  Perceived_Agency.osexp  TPS_HRI.osexp
other_material/printing/: Bowl_v6.3mf  Connectors_8.3mf  Connectors_8_0.4n_0.2mm_PLA_MK4IS_10m.bgcode  Gripper_Bowl.f3d  Table_Slider.f3d  Table_Slider_New.3mf  Table_Slider_New_0.4n_0.2mm_PLA_MK4IS_30m.bgcode  Table_Spacer.3mf  Table_Spacer.f3d  Table_Spacer_0.4n_0.15mm_PLA_MK4IS_20m.bgcode  Tray_12.3mf  Tray_12_0.4n_0.2mm_PLA_MK4IS_3h14m.bgcode  Tray_8.3mf  Tray_8_0.4n_0.2mm_PLA_MK4IS_2h10m.bgcode  Trays.f3d  Tripod Connector 3000 v3.3mf  Tripod Connector 3000 v3_0.4n_0.15mm_PLA_MK4IS_4h0m.bgcode  Tripod_Connector.f3d
other_material/transitions/: Transitions.xlsx
panda_control_reference/src/: main.py
read_poses/: read_poses.sh
state_machine/: .env.template  .gitignore  data_logger.py  demo.env  fsm.py  main.py  notifier.py  prod.env  pyproject.toml  state_machine.py  util.py
temp/: packaging.py  packaging_idle_wink.py  receiving_close_left.py  receiving_close_right.py  receiving_common_left.py  receiving_common_right.py
