[tool.poetry]
name = "gaze-tracking"
version = "0.1.0"
description = ""
authors = ["Lukas Mueller <mail@lukasmueller.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.12.0.88"
pygaze = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
