[tool.poetry]
name = "gaze-state-machine"
version = "0.1.0"
description = ""
authors = ["m-lukas <mail@lukasmueller.de>"]
readme = "README.md"
packages = [{include = "gaze_state_machine"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.14"
black = "^25.1.0"
requests = "^2.32.4"
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
