[tool.poetry]
name = "gaze-state-machine"
version = "0.1.0"
description = ""
authors = ["m-lukas <mail@lukasmueller.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
black = "^25.1.0"
requests = "^2.32.4"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
