[tool.poetry]
name = "eyes"
version = "0.1.0"
description = ""
authors = ["m-lukas <mail@lukasmueller.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^24.10.0"
isort = "^5.13.2"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
