[tool.poetry]
name = "eyes"
version = "0.1.0"
description = ""
authors = ["m-lukas <mail@lukasmueller.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.10.0"
isort = "^5.13.2"
pygame = "^2.6.1"
flask = "^3.1.1"
numpy = "^2.3.2"
requests = "^2.32.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
